# Another-Ripple

./: .gitignore  CMakeLists.txt  README.md  test.qml
AnotherRipple/: CMakeLists.txt
AnotherRipple/include/: AnotherRipple.h
AnotherRipple/include/AnotherRipple/: AnotherRippleBase.h  IconRipple.h  ImageRipple.h  ShapedRipple.h  SimpleRipple.h
AnotherRipple/src/: AnotherRippleBase.cpp  IconRipple.cpp  ImageRipple.cpp
test/: CMakeLists.txt  main.cpp  main.qml
